# reviews-plus

./: .gitignore  CLAUDE.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: github.rs  keychain.rs  lib.rs  local_diff.rs  main.rs
src/components/: comments-panel.tsx  file-palette.tsx  file-tree-sidebar.tsx  pr-url-input.tsx  shortcuts-help.tsx
src/components/ui/: resizable.tsx
src/features/local-diff/: index.tsx
src/features/my-prs/: index.tsx
src/features/review/: index.tsx
src/features/settings/: index.tsx
src/fixtures/: pr-check-runs.json  pr-comments.json  pr-commit-status.json  pr-diff.patch  pr-files.json  pr-metadata.json  pr-review-threads.json  pr-reviews.json
src/fixtures/stress/: pr-diff.patch  pr-files.json  pr-metadata.json
src/hooks/: use-keyboard-shortcuts.ts
src/lib/: token-store.ts
src/lib/diffs/: worker-pool.ts
src/lib/github/: index.ts  parse-url.ts  queries.ts  types.ts
src/lib/mock/: fixtures.ts  index.ts  invoke.ts
